<resources>
    <string name="app_name">JtiPickUp</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_pickup">Order</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Shopping Cart</string>
    <string name="total_cart">Total:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to home -->
    <string name="home_title1">#1\nRegistrierung</string>
    <string name="home_title2">#2\nAltersverifizierung</string>
    <string name="home_title3">#3\nAuswahl einer Station in der Nähe</string>
    <string name="home_title4">#4\nProduktauswahl</string>
    <string name="home_title5">#5\nBezahlung</string>
    <string name="home_title6">#6\nAbholung</string>
    <string name="home_title7">#7\nGeniessen</string>
    <string name="home_text">Herzlich Willkommen bei der JTI Pick Up Station. Starte jetzt mit der neuesten Art des Zigarettenkaufs.</string>
    <string name="home_text1">Registriere dich jetzt für die JTI Pick Up Station!</string>
    <string name="home_text2">Lass dein Alter überprüfen, damit du Bestellungen ausführen kannst!</string>
    <string name="home_text3">Wähle auf der Karte eine JTI Station in deiner Nähe aus!</string>
    <string name="home_text4">Wähle deine Produkte von JTI aus!</string>
    <string name="home_text5">Bezahle sicher und unkompliziert mit deiner Kreditkarte, Twint, etc.</string>
    <string name="home_text6">Begib dich zur ausgewählten Pick Up Station und scanne den QR-Code ein!</string>
    <string name="home_text7">Entnimm dein Produkt der Station und geniesse!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>